[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allaystone-hello"
version = "0.1.0"
description = "Example Python plugin for AllayStone"
authors = [{ name = "Codex" }]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/smartcmd/AllayStone"

[project.entry-points.allaystone]
hello = "allaystone_hello.plugin:HelloPlugin"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
